deployments/test-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "11"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"api","namespace":"test"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"api"}},"template":{"metadata":{"labels":{"app":"api"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"api-config"}},{"secretRef":{"name":"api-secret"}}],"image":"imqav3.azurecr.io/api:1.4.0-rc.1.8","imagePullPolicy":"Always","name":"api","ports":[{"containerPort":8000}],"volumeMounts":[{"mountPath":"/data","name":"data- [...]
  creationTimestamp: "2025-08-08T02:26:11Z"
  generation: 11
  name: api
  namespace: test
  resourceVersion: "24761790"
  uid: a4087aae-eca7-4f69-b164-42debf1647be
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-10T14:36:46+09:00"
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: api-config
        - secretRef:
            name: api-secret
        image: imqav3.azurecr.io/api:1.4.0-rc.1.8
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data-volume
        - mountPath: /app/config/saml/
          name: config-volume
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      initContainers:
      - command:
        - sh
        - -c
        - "mkdir -p /app/config/saml &&\ncp -r /configs/saml/onycom-idp-metadata.xml
          /app/config/saml/onycom-idp-metadata.xml &&\ncp -r /configs/saml/configs-local-build.json
          /app/config/saml/configs-local.json &&\ncp -r /ssl/imqa_io/imqa_ssl.key
          /app/config/saml/sp_private.key &&\ncp -r /ssl/imqa_io/imqa_ssl.crt /app/config/saml/sp_cert.crt
          &&\necho \"Copied files:\" &&\nls -al /app/config/saml              \n"
        image: imqav3.azurecr.io/init-config:1.0.0
        imagePullPolicy: Always
        name: config-init
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/config/saml/
          name: config-volume
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data-volume
      - emptyDir: {}
        name: config-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-08-08T02:35:15Z"
    lastUpdateTime: "2025-08-08T02:35:15Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-08T02:26:11Z"
    lastUpdateTime: "2025-08-10T05:36:49Z"
    message: ReplicaSet "api-7d57b59bdc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 11
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
