deployments/test-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"api","namespace":"test"},"spec":{"ports":[{"nodePort":30333,"port":8000,"targetPort":8000}],"selector":{"app":"api"},"type":"NodePort"}}
  creationTimestamp: "2025-08-08T02:09:18Z"
  labels:
    k8slens-edit-resource-version: v1
  name: api
  namespace: test
  resourceVersion: "28796862"
  uid: 3538a85f-1a80-46c0-8441-76ef8e8d9c90
spec:
  clusterIP: 198.19.191.139
  clusterIPs:
  - 198.19.191.139
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30333
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: api
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
