deployments/test-imqa-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"imqa-api","namespace":"test"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"imqa-api"}},"template":{"metadata":{"labels":{"app":"imqa-api"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"api-config"}},{"secretRef":{"name":"api-secret"}}],"image":"imqav3.azurecr.io/imqa-api:1.4.0-rc.1.4","imagePullPolicy":"Always","name":"imqa-api","ports":[{"containerPort":8080},{"containerPort":8085}],"v [...]
  creationTimestamp: "2025-08-10T04:25:30Z"
  generation: 3
  name: imqa-api
  namespace: test
  resourceVersion: "24761741"
  uid: 70206a03-60e5-4c5b-a255-416239c86474
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: imqa-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-10T14:36:47+09:00"
      creationTimestamp: null
      labels:
        app: imqa-api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: api-config
        - secretRef:
            name: api-secret
        image: imqav3.azurecr.io/imqa-api:1.4.0-rc.1.4
        imagePullPolicy: Always
        name: imqa-api
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8085
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data-volume
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-08-10T04:25:32Z"
    lastUpdateTime: "2025-08-10T04:25:32Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-10T04:25:30Z"
    lastUpdateTime: "2025-08-10T05:36:48Z"
    message: ReplicaSet "imqa-api-7c7df9bd56" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
