deployments/test-imqa-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"imqa-api"},"name":"imqa-api","namespace":"test"},"spec":{"ports":[{"name":"public","port":8080,"targetPort":8080},{"name":"private","port":8085,"targetPort":8085}],"selector":{"app":"imqa-api"}}}
  creationTimestamp: "2025-08-08T02:09:18Z"
  labels:
    app: imqa-api
  name: imqa-api
  namespace: test
  resourceVersion: "23550685"
  uid: a68cf7ea-a3b6-4611-bd10-e67d0efab625
spec:
  clusterIP: 198.19.209.57
  clusterIPs:
  - 198.19.209.57
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: public
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: private
    port: 8085
    protocol: TCP
    targetPort: 8085
  selector:
    app: imqa-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
