deployments/test-imqa-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "12"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"imqa-web","namespace":"test"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"imqa-web"}},"template":{"metadata":{"labels":{"app":"imqa-web"}},"spec":{"containers":[{"env":[{"name":"SCOPE","value":"web"}],"envFrom":[{"configMapRef":{"name":"api-config"}},{"secretRef":{"name":"api-secret"}}],"image":"imqav3.azurecr.io/imqa-web-frontend:1.4.0-rc.1.9","imagePullPolicy":"Always","name":"imqa-web","ports":[{ [...]
  creationTimestamp: "2025-08-08T02:09:18Z"
  generation: 12
  name: imqa-web
  namespace: test
  resourceVersion: "24761749"
  uid: 0a890fcc-08f3-4866-8396-ecd595ad10d5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: imqa-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-10T14:36:47+09:00"
      creationTimestamp: null
      labels:
        app: imqa-web
    spec:
      containers:
      - env:
        - name: SCOPE
          value: web
        envFrom:
        - configMapRef:
            name: api-config
        - secretRef:
            name: api-secret
        image: imqav3.azurecr.io/imqa-web-frontend:1.4.0-rc.1.9
        imagePullPolicy: Always
        name: imqa-web
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-08-08T02:09:23Z"
    lastUpdateTime: "2025-08-08T02:09:23Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-08T02:09:18Z"
    lastUpdateTime: "2025-08-10T05:36:48Z"
    message: ReplicaSet "imqa-web-5f8f88d85f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 12
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
