deployments/test-imqa-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"imqa-web","namespace":"test"},"spec":{"ports":[{"nodePort":31300,"port":3301,"targetPort":3000}],"selector":{"app":"imqa-web"},"type":"NodePort"}}
  creationTimestamp: "2025-08-08T02:09:18Z"
  name: imqa-web
  namespace: test
  resourceVersion: "23550710"
  uid: fe318db7-e367-46b4-a3e8-14503477bbfc
spec:
  clusterIP: 198.19.150.173
  clusterIPs:
  - 198.19.150.173
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31300
    port: 3301
    protocol: TCP
    targetPort: 3000
  selector:
    app: imqa-web
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
