deployments/test-otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"otel-collector","namespace":"test"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"otel-collector"}},"template":{"metadata":{"labels":{"app":"otel-collector"}},"spec":{"containers":[{"args":["--config=/etc/otel-collector-config.yaml","--copy-path=/var/tmp/collector-config.yaml"],"envFrom":[{"configMapRef":{"name":"api-config"}},{"secretRef":{"name":"api-secret"}}],"image":"imqav3.azurecr.io/otel-collec [...]
  creationTimestamp: "2025-08-08T02:09:17Z"
  generation: 7
  name: otel-collector
  namespace: test
  resourceVersion: "24733317"
  uid: 56bef297-44f2-4f67-b4f6-6822406c8a3b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: otel-collector
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-09T16:00:10Z"
      creationTimestamp: null
      labels:
        app: otel-collector
    spec:
      containers:
      - args:
        - --config=/etc/otel-collector-config.yaml
        - --copy-path=/var/tmp/collector-config.yaml
        envFrom:
        - configMapRef:
            name: api-config
        - secretRef:
            name: api-secret
        image: imqav3.azurecr.io/otel-collector:1.4.0-rc.1.4
        imagePullPolicy: Always
        name: otel-collector
        ports:
        - containerPort: 4317
          protocol: TCP
        - containerPort: 4318
          protocol: TCP
        - containerPort: 2255
          protocol: TCP
        - containerPort: 14268
          protocol: TCP
        - containerPort: 8888
          protocol: TCP
        - containerPort: 8889
          protocol: TCP
        - containerPort: 55679
          protocol: TCP
        - containerPort: 13133
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/otel-collector-config.yaml
          name: otel-config
          subPath: otel-collector-config.yaml
        - mountPath: /etc/manager-config.yaml
          name: otel-opamp
          subPath: manager-config.yaml
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: otel-collector-config
        name: otel-config
      - configMap:
          defaultMode: 420
          name: otel-collector-opamp-config
        name: otel-opamp
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-08-08T02:09:19Z"
    lastUpdateTime: "2025-08-08T02:09:19Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-08T02:09:17Z"
    lastUpdateTime: "2025-08-10T04:25:33Z"
    message: ReplicaSet "otel-collector-5bdf677dfb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
