deployments/test-otel-collector-symbolicator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"otel-collector-symbolicator"},"name":"otel-collector-symbolicator","namespace":"test"},"spec":{"ports":[{"name":"otlp-http","port":4319,"protocol":"TCP","targetPort":4319}],"selector":{"app":"otel-collector-symbolicator"},"type":"ClusterIP"}}
  creationTimestamp: "2025-08-08T02:09:18Z"
  labels:
    app: otel-collector-symbolicator
    k8slens-edit-resource-version: v1
  name: otel-collector-symbolicator
  namespace: test
  resourceVersion: "28787104"
  uid: b2216798-c0ab-46d2-b86a-a0e1154eac4c
spec:
  clusterIP: 198.19.206.67
  clusterIPs:
  - 198.19.206.67
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: otlp-http
    nodePort: 32257
    port: 4319
    protocol: TCP
    targetPort: 4319
  selector:
    app: otel-collector-symbolicator
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
